--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "*"
   },
   "devDependencies": {
+    "fs-extra-promise": "*",
     "mocha": "~3.4.2",
     "sinon": "*",
     "eslint": "*",
