--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
-    "lint": "eslint index.js lib/ test/ sample/",
+    "lint": "eslint index.js lib/ test/",
     "jsdoc" : "jsdoc -c ./jsdoc.conf -t ./node_modules/ink-docstrap/template -R README.md",
     "deploy": "npm run jsdoc && gh-pages -d doc"
   },
@@ -33,6 +33,7 @@
   },
   "keywords": [
     "enum files",
-    "enumerate files"
+    "enumerate files",
+    "readdir"
   ]
 }
