--- a/jsdoc.conf
+++ b/jsdoc.conf
@@ -18,7 +18,9 @@
         "sort": false
     },
     "templates": {
-        "theme": "yeti",
-        "cleverLinks": true
+        "theme": "paper",
+        "cleverLinks": true,
+        "monospaceLinks": true,
+        "copyright": "by hirowaki (https://github.com/hirowaki)"
     }
 }
